--- a/pages/.gitattributes
+++ b/pages/.gitattributes
@@ -1,2 +1,2 @@
-merged_data_5_16_24.csv filter=lfs diff=lfs merge=lfs -text
-*.csv filter=lfs diff=lfs merge=lfs -text
+merged_data_5_16_24.csv filter=lfs diff=lfs merge=lfs 
+*.csv filter=lfs diff=lfs merge=lfs 
