--- a/pages/.gitattributes
+++ b/pages/.gitattributes
@@ -1,2 +1,2 @@
-"*.csv" filter=lfs diff=lfs merge=lfs 
-"merged_data_5_16_24.csv" filter=lfs diff=lfs merge=lfs 
+.csv diff=lfs merge=lfs 
+merged_data_5_16_24.csv diff=lfs merge=lfs 
